Fixed one bug style problem with the selection problem on website(https://www.w3school.com.cn/tiy/t.asp?f=csse_overflow)

--- a/src/contents/select.styl
+++ b/src/contents/select.styl
@@ -6,6 +6,7 @@ image-size = 20px;
     width: image-size;
     height: image-size;
     padding: 0.4%;
+    margin: 0;
     position: fixed;          
     display: none;
     box-shadow: 0px 0px 2px 2px #ddd;
@@ -13,6 +14,7 @@ image-size = 20px;
     border-radius: 50%;
     z-index: 2147483648;
     box-sizing: content-box;
+    overflow: hidden;
     transition: box-shadow 200ms ease-in-out,transform 300ms ease; // set transtition effect when hover occurs
     animation: fade-in 300ms ease-in-out; // set fade-in animation on selection icon
 
@@ -24,7 +26,8 @@ image-size = 20px;
         width: image-size;
         height: image-size;
         padding: 0;
-        border: 0;     
+        border: 0; 
+        margin: 0;    
         vertical-align: top; // fix the style problem in some websites                      
                
     
